2000-05-02    <notzed@helixcode.com>

	* camel-mime-part-utils.c
	(simple_data_wrapper_construct_from_parser): Dont use autofill on
	these fucking long function anmes!!!!!!

2000-05-02  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-summary.c
	(camel_mbox_summary_expunge): Fix the offset for the summary when
	an item is expunged to take account of the From line.

2000-05-01  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-folder.h (CamelMboxFolder): Removed
	search_id.

	* providers/mbox/camel-mbox-search.c
	(camel_mbox_folder_search_cancel): Remove.d
	(camel_mbox_folder_search_complete): Removed.
	(camel_mbox_folder_search_by_expression): Changed back to sync
	api.
	(struct _searchcontext): Removed cancelled flag.
	(find_context): Removed.
	(func_header_contains): Debug out some search stuff.

	* providers/mbox/camel-mbox-search.h
	(camel_mbox_folder_search_by_expression): Moved back to sync api.

	* providers/mbox/camel-mbox-summary.c
	(camel_mbox_summary_set_flags_by_uid): New function to update the
	flags in the summary.
	(camel_mbox_summary_expunge): Expunge messages from a folder.
	(offset_content): Re-align offsets of summary when messages
	added/removed to an existing summary.
	(camel_mbox_summary_remove_uid): Remove a message summary entry by
	uid.
	(index_folder): Restore flags from X-Evolution header, if they are set.
	(index_folder): Make sure we index using a decimal uid, since
	thats what everything else indexes off (oops).
	Upped SUMMARY_VERSION as a result.
	(camel_mbox_summary_expunge): Oops, my wrong, use the string uid
	to unindex on.

	* providers/mbox/camel-mbox-folder.c (_get_message_by_uid):
	Connect to the message_changed signal.
	(_init): Set permanent flags to something reasonable.  No user
	flags yet ...
	(message_changed): If the flags of the message change, update the
	flags in the summary.
	(mbox_expunge): Implement the expunge.
	(camel_mbox_folder_class_init): Renamed all leading _'s to mbox_'s